chapitres/17/deployment+tolerations+selector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mailhog
  name: mailhog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailhog
  template:
    metadata:
      labels:
        app: mailhog
    spec:
      nodeSelector:
        workload: stateless
      tolerations:
        - key: "kind"
          operator: "Equal"
          value: "spot"
          effect: "NoSchedule"
        - key: "kubernetes.azure.com/scalesetpriority"
          operator: "Equal"
          value: "spot"
          effect: "NoSchedule"
      containers:
      - image: mailhog/mailhog
        name: mailhog
